overflow of the window corrected

--- a/home/styles.css
+++ b/home/styles.css
@@ -7,6 +7,7 @@ body {
     background: url('../assets/backgroundImage.png') no-repeat center center/cover;
     background-attachment: fixed;
     color: #333;
+    overflow-x: hidden;
 }
 
 .container {
